envoy/balancer-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  path: "/"
                route:
                  cluster: multiple
              - match:
                  prefix: "/service/ares"
                route:
                  cluster: ares
              - match:
                  prefix: "/service/atreus"
                route:
                  cluster: atreus
              # - match:
              #     regex: "^(.*)"
              #   route:
              #     cluster: atreus
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: multiple
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: multiple
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: thor
                port_value: 8080
            address:
              socket_address:
                address: ares
                port_value: 8080
  - name: ares
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ares
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ares
                port_value: 8080
  - name: atreus
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: atreus
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: atreus
                port_value: 8080
  - name: thor
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: thor
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: thor
                port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
